@@ -1,3 +1,8 @@
+2002-02-26  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev-en 00691] Re: w3m 0.2.5.1 fails to recognize '<dt id="XXX">'
+	* html.c: ATTR_CORE for dt, dd, blockquote, caption 
+
 2002-02-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03064] Re: SELECTED form value
